--- a/src/main/twirl/map.scala.html
+++ b/src/main/twirl/map.scala.html
@@ -14,6 +14,9 @@
       clear: both;
     }
     </style>
+    <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="compiled/scripts.js"></script>
 	</head>
   <body>
     <h1>Space 7-Day Roguelike</h1>
@@ -25,7 +28,9 @@
         }
       </div>
     }
-    </div>
-    </pre>
+  </div>
+  <div class="buttons">
+    <input type="button" class="execute" >Execute</input>
+  </div>
 	</body>
 </html>
