--- a/src/main/twirl/map.scala.html
+++ b/src/main/twirl/map.scala.html
@@ -13,6 +13,15 @@
     .row {
       clear: both;
     }
+    .buttons, .messages {
+      clear:both;
+    }
+    .glyph {
+      background-color: #bbb;
+    }
+    .visible {
+      background-color: #fff;
+    }
     </style>
     <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
@@ -24,13 +33,20 @@
     @for(y <- 0 to world.height-1) {
       <div class="row">
         @for(x <- 0 to world.width-1) {
-          <span class="glyph" id=@{"cell-"+x+"-"+y} data-x=@x data-y=@y>@Html(world.getRenderableAt(x,y).render)</span>
+        <span class=@if(world.visibleToMobile(1,x,y)){"glyph visible"}else{"glyph"} id=@{"cell-"+x+"-"+y} data-x=@x data-y=@y>@Html(world.getRenderableAt(x,y).render)</span>
         }
       </div>
     }
   </div>
   <div class="buttons">
     <input type="button" class="execute" value="Execute" />
+  </div>
+  <div class="messages">
+    <ol>
+      @world.statusMessages.take(5).map { msg =>
+      <li>@msg</li>
+      }
+    </ol>
   </div>
 	</body>
 </html>
